--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -24,7 +24,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #f1f1f1;
-      height: 100%;
+      height: auto;
     }
 
     /* Set black background color, white text and some padding */
@@ -39,14 +39,11 @@
     @media screen and (max-width: 767px) {
       .sidenav {
         height: auto;
-        padding: 25px;
+        padding: auto;
       }
       .row.content {height:auto;}
     }
-    #customers {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+
 }
 div.x
 {
@@ -189,7 +186,7 @@ li a:hover {
 }
   </style>
 </head>
-<body>
+<body bgcolor="grey">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
