--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -55,6 +55,29 @@ background-color:#00ccff;
 color:grey;
 
 }
+div.x1{
+background-color:#ffb3b3;
+ padding:0px;
+color:black;
+}
+.avatar1{
+vertical-align: middle;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+.button.button4 {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 .button.button3 {
     background-color: #4CAF50; /* Green */
     border: none;
@@ -326,6 +349,24 @@ li a:hover {
         <b> YOUR WALLLET BALANCE:: &nbsp &nbsp &nbsp &nbsp &nbsp <b>Rs. {{session['wallet_balance']}}</b></b>
         <hr>
         </div>
+
+        <div class="x1">
+<center><h2>My Group</h2></center>
+</div>
+
+<table  bgcolor="white">
+    <tr bgcolor="white">
+        <td rowspan="12"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="10">  Group Name</font>
+    <font size="6">          date
+            Member </font>                                                                                 </pre></td>
+        <td> <font size="10">Rs. 100</font></td> </tr>
+    <tr bgcolor="#ffcccc">
+        <td  bgcolor="#99ff99"><font size="7" color="grey">Closed</font></td>
+        <td> <font><button class="button button4"><a href="#" style="text-decoration:none; color:white;">PAY</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
+        </font></td></tr>
+
+</table>
+
 
     </div>
     <div class="col-sm-2 sidenav">
