--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -58,6 +58,7 @@ color:grey;
 div.x1{
 background-color:#ffb3b3;
  padding:0px;
+ top-margin:0px;
 color:black;
 }
 .avatar1{
@@ -357,8 +358,8 @@ li a:hover {
 <table  bgcolor="white">
     <tr bgcolor="white">
         <td rowspan="12"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="10">  Group Name</font>
-    <font size="6">          date
-            Member </font>                                                                                 </pre></td>
+    <font size="4">          date
+            Member </font>                </pre></td>
         <td> <font size="10">Rs. 100</font></td> </tr>
     <tr bgcolor="#ffcccc">
         <td  bgcolor="#99ff99"><font size="7" color="grey">Closed</font></td>
