--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -120,18 +120,7 @@ div.a1{
     padding: 12px;
     margin: 20px;
 }
-.button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
+
 
 .avatar {
     vertical-align: middle;
@@ -355,12 +344,12 @@ li a:hover {
 <center><h2>My Group</h2></center>
 </div>
 
-<table  bgcolor="white">
+            <table  bgcolor="white">
     <tr bgcolor="white">
-        <td rowspan="12"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="10">  Group Name</font>
+        <td ><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="10">  Group Name</font>
     <font size="4">          date
             Member </font>                </pre></td>
-        <td> <font size="10">Rs. 100</font></td> </tr>
+        <td bgcolor=""> <font size="10">Rs. 100</font></td> </tr>
     <tr bgcolor="#ffcccc">
         <td  bgcolor="#99ff99"><font size="7" color="grey">Closed</font></td>
         <td> <font><button class="button button4"><a href="#" style="text-decoration:none; color:white;">PAY</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
