--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -104,6 +104,7 @@ vertical-align: middle;
     cursor: pointer;
 }
 .button3 {border-radius: 8px;}
+.button4 {border-radius: 8px;}
 .button2 {border-radius: 8px;}
 
 div.a{
@@ -120,7 +121,18 @@ div.a1{
     padding: 12px;
     margin: 20px;
 }
-
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
 .avatar {
     vertical-align: middle;
@@ -340,23 +352,22 @@ li a:hover {
         <hr>
         </div>
 
-        <div class="x1">
+   <div class="x1">
 <center><h2>My Group</h2></center>
 </div>
 
-            <table  bgcolor="white">
-    <tr bgcolor="white">
-        <td ><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="10">  Group Name</font>
+<table  bgcolor="grey" >
+    <tr bgcolor="grey">
+        <td rowspan="12" bgcolor="#f5f5f0"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="6">  Group Name</font>
     <font size="4">          date
-            Member </font>                </pre></td>
-        <td bgcolor=""> <font size="10">Rs. 100</font></td> </tr>
-    <tr bgcolor="#ffcccc">
-        <td  bgcolor="#99ff99"><font size="7" color="grey">Closed</font></td>
-        <td> <font><button class="button button4"><a href="#" style="text-decoration:none; color:white;">PAY</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
-        </font></td></tr>
+            Member </font>                                       </pre></td>
+        <td bgcolor="#f5f5f0"> <font size="10">Rs. 100&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp&nbsp &nbsp &nbsp</font></td> </tr>
+    <tr >
+        <td bgcolor="#f5f5f0"><font size="5" color="black">Closed&nbsp&nbsp&nbsp &nbsp &nbsp<button class="button button4"><a href="#" style="text-decoration:none; color:white;">PAY</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
+        </font></td>
+        <td> <font></font></td></tr>
 
 </table>
-
 
     </div>
     <div class="col-sm-2 sidenav">
