--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -68,7 +68,7 @@ vertical-align: middle;
     border-radius: 50%;
 }
 .button.button4 {
-    background-color: #4CAF50; /* Green */
+    background-color:  #33ccff; /* Green */
     border: none;
     color: white;
     padding: 20px;
