--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -357,11 +357,10 @@ li a:hover {
 </div>
  {% for i in session['group_list'] %}
 
-            </script>
 <table  bgcolor="grey" >
     <tr bgcolor="grey">
         <td rowspan="12" bgcolor="#f5f5f0"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="6">{{session['group_list'][0][0]['gname']}}</font>
-    <font size="4"> {{session['group_list'][0][0]['gdate']}}
+    <font size="4"> {{session['group_list'][i][0]['gdate']}}
      Member No:{{session['group_list'][0][0]['member_no']}} </font>                                       </pre></td>
         <td bgcolor="#f5f5f0"> <font size="10">Rs. {{session['group_list'][0][0]['total_expanse']}}&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp&nbsp &nbsp &nbsp</font></td> </tr>
     <tr >
@@ -370,6 +369,7 @@ li a:hover {
         <td> <font></font></td></tr>
 
 </table>
+        <br>
 
                {% endfor %}
     </div>
