--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -161,57 +162,6 @@ li a:hover {
     color: white;
 }
 
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-
-    background-color: #fefefe;
-    margin: auto;
-    overflow: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
-}
-.close1 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close1:hover,
-.close1:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
   </style>
 </head>
 <body bgcolor="grey">
@@ -258,8 +208,9 @@ li a:hover {
   <li><a href="#news">Transactions</a></li>
   <li><a href="#contact">Invite friend</a></li>
 </ul>
+      </ul>
        <div ><br>
-        <button id="myBtn1">+Add Group</button><h4><u><i class="fa fa-group"></i> </i>My Groups</u></h4>
+        <button type="button" data-toggle="modal" data-target="#myModal1">+Add Group</button><h4><u><i class="fa fa-group"></i> </i>My Groups</u></h4>
 
         <ul id="ul1">
           <ulbody>
@@ -267,14 +218,18 @@ li a:hover {
         </ul>
          <br>
          </div>
-<div id="myModal1" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close1">&times;</span>
 
-    <h3>Enter Group Detail </h3>
-  <br>
-    <form action="https://app.octagon58.hasura-app.io/make_group" method="post">
+        <div class="modal fade" id="myModal1" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Enter Group Detail</h4>
+        </div>
+        <div class="modal-body">
+            <form action="https://app.octagon58.hasura-app.io/make_group" method="post">
 
       Enter Group Name:: <input type="text" name="gname" placeholder="Group Name" required>
         <br>      Select Group Member
@@ -291,16 +246,22 @@ li a:hover {
 
   </form>
 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
   </div>
 
-</div>
 
-
+  <!-- Modal content -->
 
 
 
       <div >
-        <button id="myBtn">+Add friends</button><h4><u>My Friends</u></h4>
+        <button type="button" data-toggle="modal" data-target="#myModal">+Add friends</button><h4><u>My Friends</u></h4>
 
         <table id="tab">
           <tbody>
@@ -308,15 +269,18 @@ li a:hover {
         </table>
 
         <hr>
-<div id="myModal" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
 
-    <h3>Select As Friend </h3>
-  <br>
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
 
-<table>    {% for i in session['all_friend'] %}
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">   Select As Friend </h4>
+        </div>
+        <div class="modal-body">
+          <table>    {% for i in session['all_friend'] %}
 
   <tr valign="middle"><td>{{i}} </td><td> <a href=https://app.octagon58.hasura-app.io/add_friend_all?uname={{i}}>+add friend</a></td>
 
@@ -326,13 +290,16 @@ li a:hover {
         <br>
 
 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
 
-
-  </form>
-
+    </div>
   </div>
 
-</div>
+
 
 
       </div>
@@ -559,58 +526,6 @@ fetch(url, requestOptions)
 
 
 
-
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-
-
-var modal1 = document.getElementById('myModal1');
-
-// Get the button that opens the modal
-var btn1 = document.getElementById("myBtn1");
-
-// Get the <span> element that closes the modal
-var span1 = document.getElementsByClassName("close1")[0];
-
-// When the user clicks the button, open the modal
-btn1.onclick = function() {
-    modal1.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span1.onclick = function() {
-    modal1.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal1) {
-        modal1.style.display = "none";
-    }
-}
 function standby() {
     document.getElementById('foo').src = 'static/image/img_avatar.png'
     }
