--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -348,10 +348,24 @@ li a:hover {
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">Add Bill To Group</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+          <form action="#" method="post">
+
+    Select Group: <select name="gid" required>
+            {% for i in session['group_list'] %}
+            {% for j in i %}
+                <option value={{j['gid']}}>{{j['gname']}}</option>
+            {% endfor %} {% endfor %}<br><br>
+
+                    </select><br><br>
+
+    Enter Amount to pay:    <input type="number" value="money" required>
+    <br><br>
+    <pre>Add Bill image(optional):                    <input type="file" value="upload image" name="file"></pre><br>
+    <br><input type="submit" value="ADD BILL">
+</form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
