--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -313,7 +313,7 @@ li a:hover {
     <div class="col-sm-8 text-left">
 
       <div class="x">
-        <button class="button button3">DASHBOARD</button>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal2"><a href="#" style="text-decoration:none; color:white;">ADD BILL</a></button> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp<button class="button button2"><a href="#" style="text-decoration:none; color:white;">Redeem Your Wallet</a></button>
+        <button class="button button3">DASHBOARD</button>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal2"><a href="#" style="text-decoration:none; color:white;">ADD BILL</a></button> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp<button class="button button2"><a href="#" style="text-decoration:none; color:white;">Split Bill</a></button>
         <hr>
         <b> YOUR WALLLET BALANCE:: &nbsp &nbsp &nbsp &nbsp &nbsp <b>Rs. {{session['wallet_balance']}}</b></b>
         <hr>
@@ -351,7 +351,7 @@ li a:hover {
           <h4 class="modal-title">Add Bill To Group</h4>
         </div>
         <div class="modal-body">
-          <form action="#" method="post">
+          <form action="#" method="post" enctype = "multipart/form-data">
 
     Select Group Name: <select name="gid" required>
             {% for i in session['group_list'] %}
@@ -363,7 +363,7 @@ li a:hover {
               <br><br>
      <pre>Enter Amount to pay:    <input type="number" value="money" required></pre>
 
-    <pre>Add Bill image(optional):             <input type="file" value="upload image" name="file"></pre><br>
+    <pre>Add Bill image(optional):                                              <input type="file" value="upload image" name="file" multiple accept='image/*'></pre><br>
     <br><input type="submit" value="ADD BILL">
 </form>
         </div>
