--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -315,7 +315,7 @@ li a:hover {
       <div class="x">
         <button class="button button3">DASHBOARD</button>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal2"><a href="#" style="text-decoration:none; color:white;">ADD BILL</a></button> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp<button class="button button2"><a href="#" style="text-decoration:none; color:white;">Split Bill</a></button>
         <hr>
-        <b> YOUR WALLLET BALANCE:: &nbsp &nbsp &nbsp &nbsp &nbsp <b>Rs. {{session['wallet_balance']}}</b></b>
+        <b> YOUR WALLLET BALANCE:: &nbsp &nbsp &nbsp &nbsp &nbsp <b>Rs. 00</b></b>
         <hr>
         </div>
 
@@ -351,7 +351,7 @@ li a:hover {
           <h4 class="modal-title">Add Bill To Group</h4>
         </div>
         <div class="modal-body">
-          <form action="#" method="post" enctype = "multipart/form-data">
+          <form action="https://app.octagon58.hasura-app.io/money_group" method="post" >
 
     Select Group Name: <select name="gid" required>
             {% for i in session['group_list'] %}
@@ -363,7 +363,7 @@ li a:hover {
               <br><br>
      <pre>Enter Amount to pay:    <input type="number" value="money" required></pre>
 
-    <pre>Add Bill image(optional):                                              <input type="file" value="upload image" name="file" multiple accept='image/*'></pre><br>
+    <pre>Enter Description(optional):           <input type="text" value="None" name="description"></pre><br>
     <br><input type="submit" value="ADD BILL">
 </form>
         </div>
