--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -361,7 +361,7 @@ li a:hover {
 
                     </select><br><br>
               <br><br>
-     <pre>Enter Amount to pay:    <input type="number" value="money" required></pre>
+     <pre>Enter Amount to pay:    <input type="number" name="money" required></pre>
 
     <pre>Enter Description(optional):           <input type="text" value="None" name="description"></pre><br>
     <br><input type="submit" value="ADD BILL">
