--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -239,6 +239,7 @@ li a:hover {
 
 
         </table>
+
         <br>
 
     <input type="submit" value="Create Group">
@@ -331,7 +332,7 @@ li a:hover {
      Member No:{{j['member_no']}} </font>                                   </pre>   </td>
         <td bgcolor="#f5f5f0"> <font size="10">Rs. {{j['total_expanse']}}&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp&nbsp &nbsp &nbsp</font></td> </tr>
     <tr >
-        <td bgcolor="#f5f5f0"><font size="5" color="black">ACTIVE&nbsp&nbsp&nbsp &nbsp &nbsp<button class="button button4"><a href="#" style="text-decoration:none; color:white;">PAY</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
+        <td bgcolor="#f5f5f0"><font size="5" color="black">ACTIVE&nbsp&nbsp&nbsp &nbsp &nbsp<button class="button button4"><a href="#" style="text-decoration:none; color:white;">MORE</a></button><button class="button button4"><a href="#" style="text-decoration:none; color:white;">Share</a></button>
         </font></td>
         <td> <font></font></td></tr>
 
