--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -345,6 +345,7 @@ button
               <font size="5">&nbsp&nbsp&nbsp&nbsp{{i[j]['username']}}</font>&nbsp&nbsp&nbsp&nbsp<font color="green" size="3">Money owe (to recieve) :Rs. {{i[j]['owe']}}
               </font>&nbsp&nbsp&nbsp&nbsp <font color="red" size="3">Money owed (To pay):{{i[j]['owed']}}</font></div>
                 {%endfor%}
+              {%endfor%}
 
 
 
