--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -342,7 +342,7 @@ button
 
               {%for i in result%}
               <br><div class="x"><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1">
-              <font size="5">&nbsp&nbsp&nbsp&nbsp{{i[0]}}</font>&nbsp&nbsp&nbsp&nbsp<font color="green" size="3">Money owe (to recieve) :Rs. {{i[3}}
+              <font size="5">&nbsp&nbsp&nbsp&nbsp{{i[0]}}</font>&nbsp&nbsp&nbsp&nbsp<font color="green" size="3">Money owe (to recieve) :Rs. {{i[3]}}
               </font>&nbsp&nbsp&nbsp&nbsp <font color="red" size="3">Money owed (To pay):{{i[4]}}</font></div>
                 {%endfor%}
 
