--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -331,7 +331,7 @@ button
           <div class="col-sm-8 text-left">
               {% for i in result1%}
 
-              <div class="x1">  <img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1"> <font size="7"> &nbsp&nbsp&nbsp&nbsp {{i[0]['gname']}}</font>&nbsp&nbsp&nbsp&nbspDate:{{i[0]['gdate']}}&nbsp&nbsp&nbsp&nbspMember No.:{{i[0]['member_no']}}&nbsp&nbsp&nbsp&nbsp<font size="6" color="grey">Total: Rs. {{i[0]['total_expanse']}}</font><br>
+              <div class="x1">  <img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{gid}}" class="avatar1" onerror="standby()"> <font size="7"> &nbsp&nbsp&nbsp&nbsp {{i[0]['gname']}}</font>&nbsp&nbsp&nbsp&nbspDate:{{i[0]['gdate']}}&nbsp&nbsp&nbsp&nbspMember No.:{{i[0]['member_no']}}&nbsp&nbsp&nbsp&nbsp<font size="6" color="grey">Total: Rs. {{i[0]['total_expanse']}}</font><br>
               <table class="t">
                  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <tr rowspan="5" bgcolor="grey">
                       <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYou owe
@@ -362,9 +362,9 @@ button
         </div>
         <div class="modal-body">
             <form action="https://app.octagon58.hasura-app.io/change_group_icon" method="post" multiple accept='image/*'>
-                {%for i in result1%}
-                <input type="text" value={{i[0]['gid']}} hidden>
-                {%endfor%}
+
+                <input type="text" value={{gid]}} hidden>
+
         <input type="file" id="fname" name="file" multiple accept='image/*' required><br>
                 <p> Size< 1mb and format- JPG/JPEG/PNG</p>
     <input type="submit" value="Change Profile Pic">
@@ -383,7 +383,7 @@ button
 
 
               {%for i in result%}
-              <br><div class="x"><img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{i[6]}}" class="avatar1">
+              <br><div class="x"><img src="https://filestore.octagon58.hasura-app.io/v1/file/{{i[2]}}" class="avatar1" onerror="standby()">
               <font size="5">&nbsp&nbsp&nbsp&nbsp{{i[0]}}</font>&nbsp&nbsp&nbsp&nbsp<font color="green" size="3">Money owe (to recieve) :Rs. {{i[3]}}
               </font>&nbsp&nbsp&nbsp&nbsp <font color="red" size="3">Money owed (To pay):Rs.{{i[4]}}</font>
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
