--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -327,7 +327,7 @@ li a:hover {
 {% for j in i %}
 <table  bgcolor="grey" >
     <tr bgcolor="grey">
-        <td rowspan="12" bgcolor="#f5f5f0"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/57" class="avatar1" /> <font size="6">{{j['gname']}}</font>
+        <td rowspan="12" bgcolor="#f5f5f0"><pre><img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{j['gid']}}" class="avatar1" /> <font size="6">{{j['gname']}}</font>
     <font size="4"> Date:{{j['gdate']}}
      Member No:{{j['member_no']}} </font>                                   </pre>   </td>
         <td bgcolor="#f5f5f0"> <font size="10">Rs. {{j['total_expanse']}}&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp&nbsp &nbsp &nbsp</font></td> </tr>
