--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -363,7 +363,7 @@ button
         <div class="modal-body">
             <form action="https://app.octagon58.hasura-app.io/change_group_icon" method="post" enctype = "multipart/form-data">
 
-                <input type="text" value="{{gid}}" hidden>
+                <input type="text" value="{{gid}}" name="gid" hidden>
 
         <input type="file" id="fname" name="file" multiple accept='image/*' required><br>
                 <p> Size< 1mb and format- JPG/JPEG/PNG</p>
