--- a/microservices/app/src/templates/group_icon_change.html
+++ b/microservices/app/src/templates/group_icon_change.html
@@ -316,7 +316,7 @@ li a:hover {
       {%if message%}
         <font size="7">{{message}}</font><br>
         <p>PREVIEW</p>
-        <img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{j['gid']}}" width="100" height="100">
+        <img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{gid}}" width="100" height="100">
         {%endif%}
       {%if fail%}
         <font size="7">{{fail}}</font><br>
