--- a/microservices/app/src/templates/group_icon_change.html
+++ b/microservices/app/src/templates/group_icon_change.html
@@ -315,8 +315,8 @@ li a:hover {
 
       {%if message%}
         <font size="7">{{message}}</font><br>
-        <p>PREVIEW</p>
-        <img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{gid}}" width="100" height="100">
+        <p>PREVIEW</p><center>
+        <img src="https://filestore.octagon58.hasura-app.io/v1/file/g{{gid}}" width="150" height="150"></center>
         {%endif%}
       {%if fail%}
         <font size="7">{{fail}}</font><br>
